--- a/TP.NET-master/ASP.Server/Views/Book/Create.cshtml
+++ b/TP.NET-master/ASP.Server/Views/Book/Create.cshtml
@@ -25,6 +25,18 @@ label {
         <input asp-for="Name" />
     </div>
     <div class="input-group">
+        <label asp-for="Contenu"></label>
+        <input asp-for="Contenu" />
+    </div>
+    <div class="input-group">
+        <label asp-for="Prix"></label>
+        <input asp-for="Prix" />
+    </div>
+    <div class="input-group">
+        <label asp-for="Auteur"></label>
+        <input asp-for="Auteur" />
+    </div>
+    <div class="input-group">
         <label asp-for="Genres"></label>
         <!--Si la page rend une erreur a cette ligne, c'est que vous n'avez pas envoyé la liste des genres dans le Controller !!! ! -->
         <select asp-for="Genres" asp-items="@(new SelectList(Model.AllGenres,"Id","Name"))">
