--- a/TP.NET-master/ASP.Server/Views/Book/List.cshtml
+++ b/TP.NET-master/ASP.Server/Views/Book/List.cshtml
@@ -30,6 +30,11 @@
         <th>
                 @Html.DisplayNameFor(model => model.Genres)
         </th>
+        <th>
+            
+               Suppression
+            
+        </th>
     </tr>
     <!-- la liste des genres est dans la variable Model qui est typé en ligne 3, elle correspond à la variable xxx dans View(xxx) du controller -->
     @foreach (var book in Model)
@@ -52,6 +57,11 @@
             </td> 
             <td>
                 @Html.DisplayFor(modelBook => book.Genres)
+            </td>
+            <td>
+                <form asp-controller="Book">
+                      <input type="submit" value="Supp" style="width: 100%; margin-top: 50px" />
+                </form>
             </td>
         </tr>
     }
