--- a/TP.NET-master/WPF.Reader/Pages/ListBooks.xaml
+++ b/TP.NET-master/WPF.Reader/Pages/ListBooks.xaml
@@ -11,6 +11,26 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ListBooks">
     <StackPanel>
+        <TextBlock Text=" Liste des Livres"/>
+        <ListBox ItemsSource="{Binding Books}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding titre}"/>
+                            <TextBlock Text="{Binding auteur}"/>
+                            <Button Command="{Binding ItemSelectedCommand}" Content="Detail"/>
+                        </StackPanel>
+                    </StackPanel>
+
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+
+
+
+
+
         <!-- 
             A vous de créer la liste avec le bon binding. Une <ListBox> fera l'affaire 
             La propriété ItemsSource doit pointé vers la propiété Books de votre dataContext actuelle 
