--- a/TP.NET-master/ASP.Server/Views/Book/List.cshtml
+++ b/TP.NET-master/ASP.Server/Views/Book/List.cshtml
@@ -73,6 +73,7 @@
             </td>
             <td>
                  <input type="submit" value="Supp" style="width: 100%; margin-top: 50px" />
+                 <input type="hidden" value="@book.Id" name="id"/>
             </td>
         </tr>
      </form>
