--- a/TP.NET-master/WPF.Reader/Pages/ListBooks.xaml
+++ b/TP.NET-master/WPF.Reader/Pages/ListBooks.xaml
@@ -9,7 +9,10 @@
       d:DataContext="{d:DesignInstance Type=vm:ListBook, d:IsDesignTimeCreatable=True}"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="ListBooks">
+      Title="ListBooks"
+      Name="Page"
+      >
+    
     <StackPanel>
         <TextBlock Text=" Liste des Livres"/>
         <ListBox ItemsSource="{Binding Books}">
@@ -19,7 +22,7 @@
                         <StackPanel Orientation="Horizontal">
                             <TextBlock Text="{Binding titre}"/>
                             <TextBlock Text="{Binding auteur}"/>
-                            <Button Command="{Binding DataContext.ItemSelectedCommand}" Content="Detail"/>
+                            <Button Command="{Binding DataContext.ItemSelectedCommand, ElementName=Page }" CommandParameter="{Binding .}" Content="Detail"/>
                         </StackPanel>
                     </StackPanel>
 
