--- a/TP.NET-master/WPF.Reader/Pages/ReadBook.xaml
+++ b/TP.NET-master/WPF.Reader/Pages/ReadBook.xaml
@@ -18,6 +18,7 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="80" />
         </Grid.RowDefinitions>
+        <TextBlock Text=" lire le Livre"/>
         <!-- On aimerais bien avoir le tire du livre en entête -->
 
         <!-- Ainsi que le contenu du livre ! -->
