--- a/TP.NET-master/ASP.Server/Views/Genre/List.cshtml
+++ b/TP.NET-master/ASP.Server/Views/Genre/List.cshtml
@@ -8,21 +8,22 @@
 <div class="listeGenres">
     <h1>Liste des Genres:</h1>
     <!-- la liste des genres est dans la variable Model qui est typé en ligne 3, elle correspond à la variable xxx dans View(xxx) du controller -->
-    @foreach (var genre in Model)
-    {
-        <table>
+    <table>
         <tr>
-           
-                @Html.DisplayFor(modelGenre => genre.Id)
-            
-            </tr>
+            <th>Id</th>
+            <th>Genre</th>
+        </tr>
+        @foreach (var genre in Model)
+        {
+        
+        
             <tr>
-            
-                @Html.DisplayFor(modelGenre => genre.Type)
-           
-             </tr>
-        </table>
-    }
+                <td>@genre.Id</td>
+                <td>@genre.Type</td>
+            </tr>
+        
+        }
+    </table>
 </div>
 
 
