Design DetailsBook Page

--- a/TP.NET-master/WPF.Reader/Pages/DetailsBook.xaml
+++ b/TP.NET-master/WPF.Reader/Pages/DetailsBook.xaml
@@ -12,26 +12,39 @@
 
     <Grid VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
         <Grid.RowDefinitions>
-            <RowDefinition Height="50" />
+            <RowDefinition Height="100" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <TextBlock Text=" Detail du Livre"/>
-        
-        <StackPanel Orientation="Horizontal">
-            <TextBox Text="{Binding CurrentBook.titre}" />
-            <TextBox Text="{Binding CurrentBook.auteur}" />
-            <TextBox Text="{Binding CurrentBook.prix}" />
-            <ListView ItemsSource="{Binding CurrentBook.Genres}">
+        <TextBlock TextDecorations="Underline" Margin="10,0,0,0"><Run Language="fr-fr" Text="D"/><Run Text="etail du Livre"/></TextBlock>
+        <TextBox Text="Titre" Width="Auto" Margin="30,26,617,57" Background="#FFC0D8FD" TextAlignment="Center" />
+        <TextBox Text="Prix" Margin="265,26,454,57" Background="#FFC0D8FD" TextAlignment="Center" RenderTransformOrigin="0.5,0.5" >
+            <TextBox.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0.194"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </TextBox.RenderTransform>
+        </TextBox>
+        <TextBox Text="Auteur" Margin="160,26,522,57" Background="#FFC0D8FD" TextAlignment="Center" />
+
+
+        <StackPanel Orientation="Horizontal" Margin="30,40,0,0">
+            <TextBox Text="{Binding CurrentBook.titre}" Width="130" Height="52" />
+            <TextBox Text="{Binding CurrentBook.auteur}" Width="105" Height="52" />
+            <TextBox Text="{Binding CurrentBook.prix}" Width="62" Height="52" />
+            <ListView ItemsSource="{Binding CurrentBook.Genres}" Height="52" Width="100">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <TextBlock Text="{Binding Type}"/>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-
-            <Button Command="{Binding DataContext.ReadCommand, ElementName=Page }" CommandParameter="{Binding CurrentBook}" Content="Lire le Livre"/>
+            <Button Command="{Binding DataContext.ReadCommand, ElementName=Page}" CommandParameter="{Binding CurrentBook}" Content="Lire le Livre" Width="102" Height="34" Margin="30,0,0,0" Background="DarkBlue" Foreground="White"/>
         </StackPanel>
-        
+        <TextBox Text="Genre" Margin="328,26,358,57" Background="#FFC0D8FD" TextAlignment="Center" TextChanged="TextBox_TextChanged" />
+
         <!-- il faut afficher les information du livre: Nom, Auteur, Prix, Genres-->
         <!-- Mais pas le contenu ! -->
         <!-- N'oublier pas le bouton pour aller lire le livre. La commande ReadCommand est faite pour ca ! -->
