--- a/TP.NET-master/WPF.Reader/Pages/ListBooks.xaml
+++ b/TP.NET-master/WPF.Reader/Pages/ListBooks.xaml
@@ -15,24 +15,27 @@
     
     <StackPanel>
         <TextBlock Text=" Liste des Livres"/>
+        <StackPanel Orientation="Horizontal" >
+            <TextBlock Text="Titre" FontSize="30" Foreground="Blue" Margin="5,0,0,0"  />
+            <TextBlock Text="Auteur" FontSize="30" Foreground="Blue" Margin="75,0,0,0"  />
+            <TextBlock Text="Detail" FontSize="30" Foreground="Blue" Margin="80,0,0,0"  />
+        </StackPanel>
+
+
         <ListBox ItemsSource="{Binding Books}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock Text="{Binding titre}"/>
-                            <TextBlock Text="{Binding auteur}"/>
-                            <Button Command="{Binding DataContext.ItemSelectedCommand, ElementName=Page }" CommandParameter="{Binding .}" Content="Detail"/>
+                        <StackPanel Orientation="Horizontal" >
+                            <TextBlock Text="{Binding titre}" Margin="5,0,0,0" />
+                            <TextBlock Text="{Binding auteur}" Margin="75,0,0,0" />
+                            <Button Command="{Binding DataContext.ItemSelectedCommand, ElementName=Page }" CommandParameter="{Binding .}" Content="Detail" Margin="170,0,0,0" Width="102" Height="34" Background="DarkBlue" Foreground="White" />
                         </StackPanel>
                     </StackPanel>
 
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-
-
-
-
 
         <!-- 
             A vous de créer la liste avec le bon binding. Une <ListBox> fera l'affaire 
