--- a/TP.NET-master/WPF.Reader/Pages/DetailsBook.xaml
+++ b/TP.NET-master/WPF.Reader/Pages/DetailsBook.xaml
@@ -27,9 +27,9 @@
 
 
         <StackPanel Orientation="Horizontal" Margin="30,40,0,0">
-            <TextBox Text="{Binding CurrentBook.titre}" Width="130" Height="52" />
-            <TextBox Text="{Binding CurrentBook.auteur}" Width="105" Height="52" />
-            <TextBox Text="{Binding CurrentBook.prix}" Width="62" Height="52" />
+            <TextBox Text="{Binding CurrentBook.titre}" Width="130" Height="52" TextAlignment="Center" />
+            <TextBox Text="{Binding CurrentBook.auteur}" Width="105" Height="52" TextAlignment="Center" />
+            <TextBox Text="{Binding CurrentBook.prix}" Width="62" Height="52" TextAlignment="Center" />
             <ListView ItemsSource="{Binding CurrentBook.Genres}" Height="52" Width="100">
                 <ListView.ItemTemplate>
                     <DataTemplate>
